--- a/Impact_model_method/Impact_model.Rmd
+++ b/Impact_model_method/Impact_model.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Impact_model.Rmd"
 author: "Lauren A. Knose, ORISE-EPA"
-date: '2023-08-30'
+date: '2024-03-27'
 output: html_document
 editor_options: 
   chunk_output_type: console
@@ -23,41 +23,26 @@ library(car) #needed to get model VIFs
 b) Loading data...
 
 ```{r}
-Me_all<- read.csv(file="Cleaned_data/Impact_model_input_data.csv")
+EFL_all<- merge(EFL_phyto2, EFL_P_ratio,
+                by.x=c("Yr", "daynum_bin"),
+                by.y=c("Yr", "daynum"),
+                all.x=TRUE)
+EFL_all$HE_ratio_TotP_mgL<- na.approx(EFL_all$HE_ratio_TotP_mgL) #interpolates NAs
 ```
 
-# Step 2. Check whether variables are correlated:
-
-```{r}
-cor<- Me_all %>% #select fields with responses, include columns with predictors
-  select(Chla_ugL, CD_cellsmL, #Chla and CD
-         Chla_ugL_k7,CD_cellsmL_k7, #Chla_t-k and CD_t-k
-         Pext_kgday_k28, #P_ext,t-k
-         Int_TotP_kgday_k28, #P_int,t-k
-         HE_ratio_k28) %>% #P_hypo:P_epi, t-k
-  mutate(#shorten names and remove duplicate fields
-    CD=CD_cellsmL, CD_cellsmL=NULL,
-    Chla=Chla_ugL,Chla_ugL=NULL,
-    Chla_k7=Chla_ugL_k7, Chla_ugL_k7=NULL,
-    CD_k7=CD_cellsmL_k7,CD_cellsmL_k7=NULL,
-    Pext=Pext_kgday_k28, Pext_kgday_k28=NULL,
-    Pint=Int_TotP_kgday_k28, Int_TotP_kgday_k28=NULL,
-    P_ratio=HE_ratio_k28,HE_ratio_k28=NULL) %>%
-  na.omit() #remove NAs
-
-M=cor(cor, method="pearson") #perform correlation using Kendall tau method
-write.csv(M, file="Products/SI_figures/Figure9_data.csv") #save figure data as table
-png(height=500, width=500, file="Products/SI_figures/Figure9_color.png", type="cairo")
-corrplot(M, #plot cor matrix
-                  diag=FALSE, #remove diagonal that shows corr of vars with themselves
-                  outline=TRUE, #add outline around shapes to see
-                  sig.level=c(0.001, 0.01, 0.05), insig='blank', #add signif stars
-                  addCoef.col='black', #add corr values in black
-                  type='upper')#only show upper half of matrix
-dev.off()
-```
 
 # Step 3. Perform regression:
+
+```{r}
+regka_CD<- glm(formula=log10(CD_cellsmL) ~ #Chla_t
+              log10(lag(CD_cellsmL, n=7)) + #Chl-a_t-k
+                log10(lag(HE_ratio_TotP_mgL, n=7)), #P_ext,t-k
+              data=EFL_all) #data frame
+summary(regka_CD)#prints the AIC 
+summary(lm(regka_CD))#prints the R2 and adjusted R2
+aov(regka_CD) #prints the sum of squares for the regression
+vif(regka_CD) #prints the VIFs 
+```
 
 a) Running first model for Chl-a...
 Model: log10(Chla_t) ~ log10(Chla_t-k) + log10(P_ext,t-k) + error
@@ -254,15 +239,44 @@ Yearly source-attributed impact outputted.
 b) calculating source-attributed impact for CD...
 
 ```{r}
-YRregk_CD_2012<- aov(formula=log10(CD_cellsmL) ~ #CD_t
-              log10(CD_cellsmL_k7) + #CD_t-k
-                log10(Pext_kgday_k28) + #P_ext,t-k
-                Int_TotP_kgday_k28, #P_int,t-k
-              data=subset(Me_complete, Yr==2012) #subset data by year
-            )
-SS_2012<- summary(YRregk_CD_2012)#prints the sum of squares for the regression 
-impact2012<- data.frame(SS_2012[[1]])[,2,drop=FALSE] #pulls out the SS as table
+regka_CD<- glm(formula=log10(CD_cellsmL) ~ #Chla_t
+              log10(lag(CD_cellsmL, n=7)) + #Chl-a_t-k
+                log10(lag(HE_ratio_TotP_mgL, n=7)), #P_ext,t-k
+              data=EFL_all) #data frame
+unique(EFL_all$Yr)
 
+
+YRregk_CD_2015<- aov(formula=log10(CD_cellsmL) ~ #CD_t
+              log10(lag(CD_cellsmL, n=7)) + #CD_t-k
+                log10(lag(HE_ratio_TotP_mgL, n=7)), #P_int,t-k
+              data=subset(EFL_all, Yr==2015) #subset data by year
+            )
+SS_2015<- summary(YRregk_CD_2015)#prints the sum of squares for the regression 
+impact2015<- data.frame(SS_2015[[1]])[,2,drop=FALSE] #pulls out the SS as table
+
+YRregk_CD_2016<- aov(formula=log10(CD_cellsmL) ~ #CD_t
+              log10(lag(CD_cellsmL, n=7)) + #CD_t-k
+                log10(lag(HE_ratio_TotP_mgL, n=7)), #P_int,t-k
+              data=subset(EFL_all, Yr==2016) #subset data by year
+            )
+SS_2016<- summary(YRregk_CD_2016)#prints the sum of squares for the regression 
+impact2016<- data.frame(SS_2016[[1]])[,2,drop=FALSE] #pulls out the SS as table
+
+YRregk_CD_2017<- aov(formula=log10(CD_cellsmL) ~ #CD_t
+              log10(lag(CD_cellsmL, n=7)) + #CD_t-k
+                log10(lag(HE_ratio_TotP_mgL, n=7)), #P_int,t-k
+              data=subset(EFL_all, Yr==2017) #subset data by year
+            )
+SS_2017<- summary(YRregk_CD_2017)#prints the sum of squares for the regression 
+impact2017<- data.frame(SS_2017[[1]])[,2,drop=FALSE] #pulls out the SS as table
+Model_output_CD<- cbind(impact2015, impact2016, impact2017) #combines all tables together
+Model_output_CD$Sum_Sq_part<- c("Seed stock", "Internal load potential", "Residual") #add column with predictor name
+colnames(Model_output_CD)<- c("2015", "2016", "2017","Sum_Sq_part")
+# renames columns with year for sum squares
+write.csv(Model_output_CD, file="Products/Figure_EFL_data.csv")
+```
+
+```{r}
 YRregk_CD_2013<- aov(formula=log10(CD_cellsmL) ~ #CD_t
               log10(CD_cellsmL_k7) + #CD_t-k
                 log10(Pext_kgday_k28) + #P_ext,t-k
