--- a/Impact_model_method/cyanoHAB_severity.Rmd
+++ b/Impact_model_method/cyanoHAB_severity.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "cyanoHAB_severity.Rmd"
 author: "Lauren A. Knose, ORISE-EPA"
-date: '2023-02-15'
+date: '2024-03-26'
 output: html_document
 editor_options: 
   chunk_output_type: console
@@ -20,6 +20,7 @@ library(ggbreak) #needed for plot scale breaks
 library(dplyr) #needed for reshaping/reformating data
 library(plotly) #needed for 3D plots
 library(zoo) #needed for NA approx function
+library(reshape2) #needed to reshape data tables long to wide
 ```
 
 Packages loaded.
@@ -27,7 +28,7 @@ Packages loaded.
 b) loading the chlorophyll-a data...
 
 ```{r}
-Chl<- read.csv(file="Original_data/ntl38_v5_chl.csv", header=TRUE) #has chl data
+Chl<- read.csv(file="Original_data/EFL_chem.csv", header=TRUE) #has chl data
 ```
 
 Chlorophyll-a data loaded. 
@@ -35,7 +36,7 @@ Chlorophyll-a data loaded.
 c) loading the phytoplankton data...
 
 ```{r}
-phyto<-read.csv(file="Original_data/ntl88_v13_phytoplankton.csv", header=TRUE) #has the phytoplankton community dataset
+phyto<-read.csv(file="Original_data/EFL_phytoplankton.csv", header=TRUE) #has the phytoplankton community dataset
 ```
 
 Phytoplankton community data loaded. 
@@ -43,7 +44,7 @@ Phytoplankton community data loaded.
 d) loading the Secchi depth data...
 
 ```{r}
-Secchi<- read.csv(file="Original_data/ntl31_v9_secchi.csv") #has Secchi depth data
+Secchi<- read.csv(file="Original_data/EFL_Secchi.csv") #has Secchi depth data
 ```
 
 # Step 2. Define and filter data:
@@ -51,48 +52,56 @@ Secchi<- read.csv(file="Original_data/ntl31_v9_secchi.csv") #has Secchi depth da
 a) defining and filtering data for total algal biomass (as Chl-a)...
 
 ```{r}
-Me_Chl<- Chl %>%
-  mutate(sampledate=as.Date(sampledate, origin="1899-12-30"), #tells R to format field as Date
-         Chla_ugL= tri_chl_spec, #renames field to common name with units
+Chl<- reshape(Chl, idvar=c("Date", "depth_ft"), 
+               timevar="Analyte", 
+               direction="wide") #reshape to wide
+EFL_Chl<- Chl %>%
+  mutate(sampledate=as.Date(Date, format="%m/%d/%Y", 
+                            origin="1899-12-30"), #tells R to format field as Date
+         Chla_ugL=Value.CHLA,
          Yr=as.numeric(format(sampledate, "%Y")), #renames field
          daynum=as.numeric(format(sampledate, "%j"))) %>% #renames field to common name
-  filter(lakeid=="ME", #filter for Lake Mendota data
-         depth_range_m=="0-8", #filter for data from integrated samples 0 to 8m
-         rep=="1") %>% #remove QA analytic replicates
   filter(!is.na(Chla_ugL)) %>% #removes NAs in chl-a data
   select(sampledate, Yr, Chla_ugL, daynum) #selects only fields of interest
 ```
 
 Chl-a data defined and filtered. 
 
-b) defining and filtering data for cyanobacteria relative biovolume (CRB) and
-cyanobacteria density (CD)...
+b) defining and filtering data for cyanobacteria density (CD)...
 
 ```{r}
-Me_cyanoRB<- phyto %>%
-  mutate(sampledate=as.Date(sampledate, origin="1899-12-30")) %>% #tells R to format field as Datey
-  filter(lakeid=="ME", #filter for Lake Mendota data
-         depth_range=="0-8m", #filter for data from integrated samples 0 to 8m
-         division=="Cyanophyta") %>% #filter for cyanobacteria data
+EFL_cyanoRB<- phyto %>%
+  mutate(sampledate=as.Date(Collection_Date, format="%m/%d/%Y",
+                            origin="1899-12-30"),
+         CD_cellsmL=as.numeric(TaxaSpecific_Cell_Density_cellsmL)) %>% #tells R to format field as Datey
+  filter(SiteID=="BUO", #filter for Lake Mendota data
+         Division=="Cyanobacteria") %>% #filter for cyanobacteria data
+  select(sampledate, Depth_ft, CD_cellsmL) %>% 
   group_by(sampledate) %>% #group all observations by sample date
-  summarize(relbiovol=sum(relative_total_biovolume), #add all observations of cyanobacteria biovolumes together for each sample date
-            CD_cellsmL=sum(cells_per_ml)) %>% #adds all the cyanobacteria cells/mL together for each sample date
-  filter(relbiovol<=100) %>% #remove any invalid records (>100%  not valid entry)   
+  summarize(CD_cellsmL=sum(CD_cellsmL, na.rm=TRUE)) %>% #adds all the cyanobacteria cells/mL together for each sample date
   mutate(Yr=as.numeric(format(sampledate, "%Y")), #renames field
          daynum=as.numeric(format(sampledate, "%j")))  #adds field with day
 ```
 
-CRB and CD data defined and filtered.
+CD data defined and filtered.
 
 c) defining and filtering the Secchi depth data...
 
 ```{r}
-Me_Secchi<- Secchi %>%
-  mutate(sampledate=as.Date(sampledate, origin="1899-12-30"),#tells R to format field as Date
-         SD_m=secnview) %>% #adds units to field
-  filter(lakeid=="ME") %>% #filter for Lake Mendota data
-  mutate(Yr=as.numeric(format(sampledate, "%Y")), #renames field
-         daynum=as.numeric(format(sampledate, "%j"))) #adds field with day
+in_m<- 1*0.0254 #conversion factor from inches to meters
+EFL_Secchi<- Secchi %>%
+  mutate(sampledate=as.Date(Date, format="%m/%d/%Y",
+                            origin="1899-12-30")) %>% #tells R to format field as Date
+  filter(id=="EFL", depth_ft==0) %>%  #filter for specific site and depth
+  select(sampledate, Analyte, Value) #select fields needed
+EFL_Secchi<- reshape(EFL_Secchi, idvar=c("sampledate"), 
+               timevar="Analyte", 
+               direction="wide") #reshape to wide
+EFL_Secchi <- EFL_Secchi %>%
+  mutate(Yr=as.numeric(format(sampledate, "%Y")), #adds field with year
+         daynum=as.numeric(format(sampledate, "%j")), #adds field with day
+         Secchi_m=as.numeric(Value.Secchi*in_m),#adds field with Secchi in m
+         Value.Secchi=NULL) #remove extra field
 ```
 
 # Step 3. View the data available:
@@ -100,34 +109,41 @@ Me_Secchi<- Secchi %>%
 a) Plotting Chl-a data available...
 
 ```{r}
-SI_fig3<- ggplot(data=Me_Chl, aes(x=sampledate, y=Chla_ugL)) + #plots Chl-a across date
+ggplot(data=EFL_Chl, aes(x=sampledate, y=Chla_ugL)) + #plots Chl-a across date
   geom_point() + #adds points at observations
   geom_line() + #adds lines between 
   theme_classic(base_size=12) +
   labs(x="Date", y="Total Chl-a (ug/L)")
-SI_fig3 #prints out figure
-ggsave("Products/SI_figures/Figure3.png") #saves plot to Products folder
+ggplot(data=EFL_Chl, #create limno plot with depth inverse on y-axis
+       aes(x=daynum, #sampled date as x-axis
+           y=Chla_ugL,
+           color=Chla_ugL)) + #and data points colored by temperature
+  geom_point() + #plot points
+  facet_wrap(~Yr) + #make separate plot for each year
+  theme_classic() +
+  labs(x="Day of Year", y="Chl-a (ug/L)") 
 ```
 
 Chl-a data plotted. Chl-a available from 2008 to 2012, note NAs in 2017.
 
-b) Plotting CRB and CD data available...
+b) Plotting CD data available...
 
 ```{r}
-a<- ggplot(data=Me_cyanoRB, aes(x=sampledate, y=relbiovol))+
-  geom_point() +  #point plot 
-  geom_line() + #lines between points
-  theme_classic(base_size=12)+
-  labs(x="Date", y="Cyanobacteria Relative Biovolume 
-       (as % total phytoplankton biovolume)")
-b<- ggplot(data=Me_cyanoRB, aes(x=sampledate, y=CD_cellsmL/1000))+
+ggplot(data=subset(EFL_cyanoRB, Yr>=2015), aes(x=sampledate, y=CD_cellsmL/1000))+
   geom_point() +  #point plot 
   geom_line() + #lines between points
   theme_classic(base_size=12)+
   labs(x="Date", y="Cyanobacteria Density (10^3 cells/mL)")
-SI_fig4<- a / b #plot a over plot b
-SI_fig4 #prints out figure
-ggsave("Products/SI_figures/Figure4.png") #saves plot to Products folder
+
+ggplot(data=EFL_cyanoRB, #create limno plot with depth inverse on y-axis
+       aes(x=daynum, #sampled date as x-axis
+           y=CD_cellsmL,
+           color=CD_cellsmL)) + #and data points colored by temperature
+  geom_point() + #plot points
+  facet_wrap(~Yr) + #make separate plot for each year
+  theme_classic() +
+  labs(x="Day of Year", y="Cyano Density (cells/mL)") 
+  
 ```
 
 CRB and CD data plotted. 
@@ -136,36 +152,37 @@ c) plotting Secchi depth and cyanobacteria relative biovolume to get cyanoHAB
 season...
 
 ```{r}
-Me_Secchi_fig2<- Me_Secchi %>%
-  select(sampledate, SD_m) #select fields of interest
-Me_cyanoRB_fig2<- Me_cyanoRB %>%
-  select(sampledate, Yr, daynum, relbiovol) #selects fields of interest
-Figure2_data<- merge(Me_Secchi_fig2, Me_cyanoRB_fig2, by=c("sampledate"),
+EFL_Secchi_fig<- EFL_Secchi %>%
+  select(sampledate, Secchi_m) #select fields of interest
+EFL_cyanoRB_fig<- EFL_cyanoRB %>%
+  select(sampledate, CD_cellsmL) #selects fields of interest
+Figure_data<- merge(EFL_Secchi_fig, EFL_cyanoRB_fig, by=c("sampledate"),
                        all=TRUE) #merges data frames and keeps all records
-write.csv(Figure2_data, file="Products/Figure2_data.csv")
-a<- ggplot(data=Figure2_data, aes(x=daynum, y=SD_m)) + #plots SD across day
+Figure_data<- Figure_data %>%
+  mutate(Yr=as.numeric(format(sampledate, "%Y")), #adds field with year
+         daynum=as.numeric(format(sampledate, "%j")))
+
+a <- ggplot(data=Figure_data, aes(x=daynum, y=Secchi_m)) + #plots SD across day
   geom_point() + #plots observations as points
   theme_classic(base_size=12) +
   geom_smooth() + #adds regression curve
-  labs(x="Day of year", y="Secchi depth (m)") +
-  annotate('rect', fill='gray60', alpha=.2, #creates a shadow box 
-           xmin=-Inf, xmax=196, ymin=0, ymax=Inf) +#shadow box highlights CyanoHAB season
-  annotate('rect', fill='gray60', alpha=.2, #creates a shadow box 
-           xmin=258, xmax=Inf, ymin=0, ymax=Inf)  #shadow box highlights CyanoHAB season
-b <- ggplot(data=Figure2_data, aes(x=daynum, y=relbiovol)) + #plots cyano RB across day
+  labs(x="Day of year", y="Secchi depth (m)") 
+#  annotate('rect', fill='gray60', alpha=.2, #creates a shadow box 
+#           xmin=-Inf, xmax=196, ymin=0, ymax=Inf) +#shadow box highlights CyanoHAB season
+#  annotate('rect', fill='gray60', alpha=.2, #creates a shadow box 
+#           xmin=258, xmax=Inf, ymin=0, ymax=Inf)  #shadow box highlights CyanoHAB season
+b <- ggplot(data=Figure_data, aes(x=daynum, y=CD_cellsmL)) + #plots cyano RB across day
   geom_point() + #plots observations as points
   theme_classic(base_size=12) +
   geom_smooth() + #adds regression curve
   labs(x="Day of year", 
-       y="Cyanobacteria relative biovolume 
-       (as % total phytoplankton biovolume)") +
-  annotate('rect', fill='gray60', alpha=.2, #creates a shadow box 
-           xmin=-Inf, xmax=196, ymin=0, ymax=Inf) +#shadow box highlights CyanoHAB season
-  annotate('rect', fill='gray60', alpha=.2, #creates a shadow box 
-           xmin=258, xmax=Inf, ymin=0, ymax=Inf)  #shadow box highlights CyanoHAB season
-fig2<- a / b #plot a over plot b
-fig2 #print out plot
-ggsave("Products/Figure2_color.png") #saves plot to Products folder
+       y="Cyanobacteria density (cells/mL))") 
+#  annotate('rect', fill='gray60', alpha=.2, #creates a shadow box 
+#           xmin=-Inf, xmax=196, ymin=0, ymax=Inf) +#shadow box highlights CyanoHAB season
+#  annotate('rect', fill='gray60', alpha=.2, #creates a shadow box 
+#           xmin=258, xmax=Inf, ymin=0, ymax=Inf)  #shadow box highlights CyanoHAB season
+fig<- a / b #plot a over plot b
+fig #print out plot
 ```
 
 Data plotted.
@@ -174,74 +191,20 @@ Data plotted.
 
 a) defining expected observation frequencies...
 ```{r}
-Yr<- seq(from=2012, #define year start of study period
-             to=2018, #define year end of study period
+Yr<- seq(from=2015, #define year start of study period
+             to=2017, #define year end of study period
              by=1) #creates a sequence every 1 year
-Yr #prints the expected years of data
-daynum_bins<- seq(from=196, #define date start of CyanoHAB season
-                  to=258, #define date end of CyanoHAB season
-                  by=14) #creates a sequence every 14 days 
+Yr
+daynum_bins<- seq(from=181, #define date start of CyanoHAB season
+                  to=245, #define date end of CyanoHAB season
+                  by=1) #creates a sequence every 1 day 
 daynum_bins #prints the expected observation dates of data
-Me_phyto<- data.frame(Yr=rep(Yr, each=5), daynum_bin=rep(daynum_bins, times=7)) #create data frame with expected year and day number
+EFL_phyto<- data.frame(Yr=rep(Yr, each=65),  #create data frame with expected yr
+                       daynum_bin=rep(daynum_bins, times=3)) #and day number
+EFL_phyto #prints data frame
 ```
 
 Defined expected observation frequency.
-
-b) binning Chl observed dates into expected dates...
-
-```{r}
-Me_Chl <- Me_Chl  %>%
-  filter(Yr>=2012 & Yr<=2018) %>% #filter for study years
-  filter(daynum >=189 & daynum <=265) %>% #filter for CyanoHAB season +- 7 days
-  mutate(daynum_bin=
-         ifelse(daynum<(daynum_bins[2]-7), #if observation is <= bin 2 min
-                daynum_bins[1], #yes returns bin 1
-                ifelse(daynum>=(daynum_bins[2]-7)&daynum<(daynum_bins[3]-7),
-              #if observation is > bin 2 min and <= bin 3 min
-              daynum_bins[2], #yes returns bin 2
-              ifelse(daynum>=(daynum_bins[3]-7)&daynum<(daynum_bins[4]-7),
-                     #if observation is > bin 3 min and <= bin 4 min
-                     daynum_bins[3], #yes returns bin 3
-                     ifelse(daynum>=(daynum_bins[4]-7)&daynum<(daynum_bins[5]-7),
-                            #if observation is > bin 4 min and <= bin 5 min 
-                            daynum_bins[4], #yes returns bin 4
-                            daynum_bins[5])#no returns bin 5
-                     )
-              )
-       ) 
-)
-Me_Chl<- Me_Chl %>% 
-  filter(!duplicated(cbind(Yr, daynum_bin), fromLast = TRUE)) #remove first duplicate
-```
-
-Observed dates assigned to closest expected dates.
-
-b) binning CD observed dates into expected dates...
-
-```{r}
-Me_cyanoRB <- Me_cyanoRB  %>% 
-  filter(Yr>=2012 & Yr<=2018) %>% #filter for study years
-  filter(daynum >=189 & daynum <=265) %>% #filter for CyanoHAB season +- 7 days
-  mutate(daynum_bin=
-         ifelse(daynum<(daynum_bins[2]-7), #if observation is <= bin 2 min
-                daynum_bins[1], #yes returns bin 1
-                ifelse(daynum>=(daynum_bins[2]-7)&daynum<(daynum_bins[3]-7),
-              #if observation is > bin 2 min and <= bin 3 min
-              daynum_bins[2], #yes returns bin 2
-              ifelse(daynum>=(daynum_bins[3]-7)&daynum<(daynum_bins[4]-7),
-                     #if observation is > bin 3 min and <= bin 4 min
-                     daynum_bins[3], #yes returns bin 3
-                     ifelse(daynum>=(daynum_bins[4]-7)&daynum<(daynum_bins[5]-7),
-                            #if observation is > bin 4 min and <= bin 5 min 
-                            daynum_bins[4], #yes returns bin 4
-                            daynum_bins[5])#no returns bin 5
-                     )
-              )
-       ) 
-)
-Me_cyanoRB<- Me_cyanoRB %>% 
-  filter(!duplicated(cbind(Yr, daynum_bin), fromLast = TRUE)) #remove first duplicate
-```
 
 Observed dates assigned to closest expected dates.
 
@@ -249,13 +212,20 @@ c) merging the data frames...
 Note, R only merges two data frames at one time.
 
 ```{r}
-Me_phyto<- merge(Me_phyto, #x data frame
-                 Me_Chl, #y data frame
-                 by=c("Yr","daynum_bin"),
+EFL_Chl_3yr<- EFL_Chl %>%
+  filter(Yr>=2015 & Yr <=2017) #filters data for target years
+EFL_cyanoRB_3yr<- EFL_cyanoRB %>%
+  filter(Yr>=2015 & Yr <=2017) #filters data for target years
+
+EFL_phyto<- merge(EFL_phyto, #x data frame
+                 EFL_Chl_3yr, #y data frame
+                 by.x=c("Yr","daynum_bin"),
+                 by.y=c("Yr","daynum"),
                  all.x=TRUE) #define the key fields
-Me_phyto<- merge(Me_phyto, #x data frame
-                 Me_cyanoRB, #y data frame
-                 by=c("Yr","daynum_bin"),
+EFL_phyto<- merge(EFL_phyto, #x data frame
+                 EFL_cyanoRB_3yr, #y data frame
+                 by.x=c("Yr","daynum_bin"),
+                 by.y=c("Yr","daynum"),
                  all.x=TRUE) #define the key fields
 ```
 
@@ -264,8 +234,9 @@ Data merged.
 # Step 5. Check for NAs, interpolate missing data values as needed:
 
 ```{r}
-Me_phyto$Chla_ugL<- na.approx(Me_phyto$Chla_ugL) #interpolates NAs
-Me_phyto$CD_cellsmL<- na.approx(Me_phyto$CD_cellsmL) #interpolates NAs
+EFL_phyto2<- EFL_phyto[1:186, ] #remove last NA's
+EFL_phyto2$Chla_ugL<- na.approx(EFL_phyto2$Chla_ugL) #interpolates NAs
+EFL_phyto2$CD_cellsmL<- na.approx(EFL_phyto2$CD_cellsmL) #interpolates NAs
 ```
 
 Missing values interpolated.
@@ -273,150 +244,5 @@ Missing values interpolated.
 # Step 6. Save as new data file:
 
 ```{r}
-write.csv(Me_phyto, file="Cleaned_data/cyanoHAB_severity.csv")
+write.csv(EFL_phyto2, file="Cleaned_data/cyanoHAB_severity_EFL.csv")
 ```
-
-# Step 7. Summarize and view the data:
-
-a) 3D plot of Chl-a across day number and year...
-
-```{r}
-Me_Chl<- Chl %>%
-  mutate(sampledate=as.Date(sampledate, origin="1899-12-30"), #tells R to format field as Date
-         Chla_ugL= tri_chl_spec, #renames field to common name with units
-         ) %>% 
-  filter(lakeid=="ME", #filter for Lake Mendota data
-         depth_range_m=="0-8", #filter for data from integrated samples 0 to 8m
-         rep=="1") %>% #remove QA analytic replicates
-  filter(!is.na(Chla_ugL)) %>% #removes NAs in chl-a data
-  select(sampledate, Chla_ugL) #selects only fields of interest
-
-date_range<- seq( #creates a vector of sequence data
-  min(Me_Chl$sampledate), #starting at the first sample date
-  max(Me_Chl$sampledate), #ending at the last sample date
-  by="1 day") #observations every day  
-interpolated<- approx( #creates a vector of data that linearly interpolates 
-  Me_Chl$sampledate, #across date
-  Me_Chl$Chla_ugL, #the predicted values of Chl-a
-  xout=date_range) #for every 1 day
-Chla_interp <- data.frame( #creates a new data frame that has 
-  sampledate = as.Date(interpolated$x), #renames the new vector as common field 
-  Chla_ugL=interpolated$y) #renames the new vector as common field with units
-
-Chla_interp<- Chla_interp %>%
-  mutate(Yr=as.numeric(format(sampledate, "%Y")), #adds field with year
-         daynum=as.numeric(format(sampledate, "%j")) #adds field with day of yr
-         ) %>%
-  filter(Yr>=2012 & Yr<=2018) #filter for study period
-
-SI_fig5a<- plot_ly(x=Chla_interp$Yr, 
-  y=Chla_interp$daynum, 
-  z=Chla_interp$Chla_ugL, 
-  type="scatter3d", mode="markers",
-  color=Chla_interp$Chla_ugL)
-SI_fig5a<- SI_fig5a %>%
-  layout(scene=list(xaxis=list(title="Year"),
-         yaxis=list(title="Day of Year"),
-         zaxis=list(title="Chlorophyll-a (ug/L)")))
-SI_fig5a #prints the plot
-ggsave("Products/SI_figures/Figure5a_color.png") #saves plot to Products folder
-```
-
-b) 3D plot of CD across day number and year...
-
-```{r}
-Me_cyanoRB<- phyto %>%
-  mutate(sampledate=as.Date(sampledate, origin="1899-12-30")) %>% #tells R to format field as Datey
-  filter(lakeid=="ME", #filter for Lake Mendota data
-         depth_range=="0-8m", #filter for data from integrated samples 0 to 8m
-         division=="Cyanophyta") %>% #filter for cyanobacteria data
-  group_by(sampledate) %>% #group all observations by sample date
-  summarize(relbiovol=sum(relative_total_biovolume), #add all observations of cyanobacteria biovolumes together for each sample date
-            CD_cellsmL=sum(cells_per_ml)) %>% #adds all the cyanobacteria cells/mL together for each sample date
-  filter(relbiovol<=100) %>% #remove any invalid records (>100%  not valid entry)   
-  mutate(Yr=as.numeric(format(sampledate, "%Y")), #renames field
-         daynum=as.numeric(format(sampledate, "%j"))) %>% #adds field with day
-  filter(Yr>=2012 & Yr<=2018) #filter for study years
-
-date_range<- seq( #creates a vector of sequence data
-  min(Me_cyanoRB$sampledate), #starting at the first sample date
-  max(Me_cyanoRB$sampledate), #ending at the last sample date
-  by="1 day") #observations every day  
-interpolated<- approx( #creates a vector of data that linearly interpolates 
-  Me_cyanoRB$sampledate, #across date
-  Me_cyanoRB$CD_cellsmL, #the predicted values of Cyanos
-  xout=date_range) #for every 1 day
-CD_interp <- data.frame( #creates a new data frame that has 
-  sampledate = as.Date(interpolated$x), #renames the new vector as common field 
-  CD_cellsmL=interpolated$y) #renames the new vector as common field with units
-
-CD_interp<- CD_interp %>%
-  mutate(Yr=as.numeric(format(sampledate, "%Y")), #adds field with year
-         daynum=as.numeric(format(sampledate, "%j")) #adds field with day of yr
-         ) %>%
-  filter(Yr>=2012 & Yr<=2018) #filter for study period
-
-SI_fig5b<- plot_ly(x=CD_interp$Yr, 
-  y=CD_interp$daynum, 
-  z=CD_interp$CD_cellsmL, 
-  type="scatter3d", mode="markers",
-  color=CD_interp$CD_cellsmL)
-SI_fig5b<- SI_fig5b %>%
-  layout(scene=list(xaxis=list(title="Year"),
-         yaxis=list(title="Day of Year"),
-         zaxis=list(title="Cyanobacteria Density (cells/mL)")))
-SI_fig5b #prints the figure
-ggsave("Products/SI_figures/Figure5b_color.png") #saves plot to Products folder
-```
-
-c) Plot CyanoHAB severity, using Chl-a by day of year...
-
-```{r}
-SI_fig6<- ggplot(data=subset(Me_phyto, !Yr==2017), #note all data in 2017 were zeroed due 
-       #to failing QA from source
-       aes(x=daynum_bin,y=Chla_ugL)) + 
-  geom_point()+ #adds points 
-  geom_line() + #adds lines between points
-  facet_wrap(~Yr) +
-  labs(title="Epilimnion (depth <= 8 m) Lake Mendota, WI", #add title
-       x="Day of Year", #add x axis label
-       shape="Year", #add legend label as year
-       y="Extracted Chl-a (ug/L)", #add y axis label
-       caption="Color coding along y-axis indicates CyanoHAB severity (green = low, orange = moderate, red = severe).") + #add caption for notation
-  theme_classic(base_size=12)+
-  #scale_color_continuous(name="Year")+ #adds color scale for year
-  annotate('rect', xmin=min(Me_phyto$daynum_bin), xmax=max(Me_phyto$daynum_bin), 
-           ymin=0, ymax=12, alpha=.2, fill='green') + #low/no CyanoHAB
-  annotate('rect', xmin=min(Me_phyto$daynum_bin), xmax=max(Me_phyto$daynum_bin), 
-           ymin=12, ymax=50, alpha=.2, fill='orange')+ #moderate CyanoHAB
-  annotate('rect', xmin=min(Me_phyto$daynum_bin), xmax=max(Me_phyto$daynum_bin), 
-           ymin=50, ymax=Inf, alpha=.2, fill='red') #severe CyanoHAB
-SI_fig6 #prints out figure
-ggsave("Products/SI_figures/Figure6_color.png") #saves plot to Products folder
-```
-
-d) Plot CD by day of year...
-
-```{r}
-SI_fig7<- ggplot(data=Me_phyto, 
-       aes(x=daynum_bin, y=CD_cellsmL)) + 
-  geom_point()+ #colors points by year
-  geom_line()+
-  facet_wrap(~Yr) +
-  labs(title = "Epilimnion (depth <= 8 m) Lake Mendota, WI", #adds title
-       x="Day of Year", #adds x-axis label
-       shape="Year",
-       y="Cyanobacteria Density (cells/mL)", #adds y-xis label
-       caption="Color coding along y-axis indicates CyanoHAB severity (green = low, orange = moderate, red = severe).") + #add caption for notation
-  theme_classic(base_size=12)+
-  #scale_color_continuous(name="Year")+ #adds color scale for year
-  annotate('rect', xmin=min(Me_phyto$daynum_bin), xmax=max(Me_phyto$daynum_bin),
-           ymin=0, ymax=20000, alpha=.2, fill='green') + #low/no CyanoHAB
-  annotate('rect', xmin=min(Me_phyto$daynum_bin), xmax=max(Me_phyto$daynum_bin),
-           ymin=20000, ymax=100000, alpha=.2, fill='orange')+ #moderate CyanoHAB
-  annotate('rect', xmin=min(Me_phyto$daynum_bin), xmax=max(Me_phyto$daynum_bin),
-           ymin=100000, ymax=Inf, alpha=.2, fill='red') #severe CyanoHAB
-SI_fig7 #prints out figure
-ggsave("Products/SI_figures/Figure7_color.png") #saves plot to Products folder
-```
-
