--- a/Impact_model_method/cyanoHAB_severity.Rmd
+++ b/Impact_model_method/cyanoHAB_severity.Rmd
@@ -40,12 +40,6 @@ phyto<-read.csv(file="Original_data/ntl88_v13_phytoplankton.csv", header=TRUE) #
 
 Phytoplankton community data loaded. 
 
-d) loading the Secchi depth data...
-
-```{r}
-Secchi<- read.csv(file="Original_data/ntl31_v9_secchi.csv") #has Secchi depth data
-```
-
 # Step 2. Define and filter data:
 
 a) defining and filtering data for total algal biomass (as Chl-a)...
@@ -65,8 +59,7 @@ Me_Chl<- Chl %>%
 
 Chl-a data defined and filtered. 
 
-b) defining and filtering data for cyanobacteria relative biovolume (CRB) and
-cyanobacteria density (CD)...
+b) defining and filtering data for cyanobacteria relative biovolume (CRB) and cyanobacteria density (CD)...
 
 ```{r}
 Me_cyanoRB<- phyto %>%
@@ -75,25 +68,14 @@ Me_cyanoRB<- phyto %>%
          depth_range=="0-8m", #filter for data from integrated samples 0 to 8m
          division=="Cyanophyta") %>% #filter for cyanobacteria data
   group_by(sampledate) %>% #group all observations by sample date
-  summarize(relbiovol=sum(relative_total_biovolume), #add all observations of cyanobacteria biovolumes together for each sample date
+  summarize(cyano_relbiovol=sum(relative_total_biovolume), #add all observations of cyanobacteria biovolumes together for each sample date
             CD_cellsmL=sum(cells_per_ml)) %>% #adds all the cyanobacteria cells/mL together for each sample date
-  filter(relbiovol<=100) %>% #remove any invalid records (>100%  not valid entry)   
+  filter(cyano_relbiovol<=100) %>% #remove any invalid records (>100%  not valid entry)   
   mutate(Yr=as.numeric(format(sampledate, "%Y")), #renames field
          daynum=as.numeric(format(sampledate, "%j")))  #adds field with day
 ```
 
 CRB and CD data defined and filtered.
-
-c) defining and filtering the Secchi depth data...
-
-```{r}
-Me_Secchi<- Secchi %>%
-  mutate(sampledate=as.Date(sampledate, origin="1899-12-30"),#tells R to format field as Date
-         SD_m=secnview) %>% #adds units to field
-  filter(lakeid=="ME") %>% #filter for Lake Mendota data
-  mutate(Yr=as.numeric(format(sampledate, "%Y")), #renames field
-         daynum=as.numeric(format(sampledate, "%j"))) #adds field with day
-```
 
 # Step 3. View the data available:
 
@@ -114,7 +96,7 @@ Chl-a data plotted. Chl-a available from 2008 to 2012, note NAs in 2017.
 b) Plotting CRB and CD data available...
 
 ```{r}
-a<- ggplot(data=Me_cyanoRB, aes(x=sampledate, y=relbiovol))+
+a<- ggplot(data=Me_cyanoRB, aes(x=sampledate, y=cyano_relbiovol))+
   geom_point() +  #point plot 
   geom_line() + #lines between points
   theme_classic(base_size=12)+
@@ -131,44 +113,6 @@ ggsave("Products/SI_figures/Figure4.png") #saves plot to Products folder
 ```
 
 CRB and CD data plotted. 
-
-c) plotting Secchi depth and cyanobacteria relative biovolume to get cyanoHAB
-season...
-
-```{r}
-Me_Secchi_fig2<- Me_Secchi %>%
-  select(sampledate, SD_m) #select fields of interest
-Me_cyanoRB_fig2<- Me_cyanoRB %>%
-  select(sampledate, Yr, daynum, relbiovol) #selects fields of interest
-Figure2_data<- merge(Me_Secchi_fig2, Me_cyanoRB_fig2, by=c("sampledate"),
-                       all=TRUE) #merges data frames and keeps all records
-write.csv(Figure2_data, file="Products/Figure2_data.csv")
-a<- ggplot(data=Figure2_data, aes(x=daynum, y=SD_m)) + #plots SD across day
-  geom_point() + #plots observations as points
-  theme_classic(base_size=12) +
-  geom_smooth() + #adds regression curve
-  labs(x="Day of year", y="Secchi depth (m)") +
-  annotate('rect', fill='gray60', alpha=.2, #creates a shadow box 
-           xmin=-Inf, xmax=196, ymin=0, ymax=Inf) +#shadow box highlights CyanoHAB season
-  annotate('rect', fill='gray60', alpha=.2, #creates a shadow box 
-           xmin=258, xmax=Inf, ymin=0, ymax=Inf)  #shadow box highlights CyanoHAB season
-b <- ggplot(data=Figure2_data, aes(x=daynum, y=relbiovol)) + #plots cyano RB across day
-  geom_point() + #plots observations as points
-  theme_classic(base_size=12) +
-  geom_smooth() + #adds regression curve
-  labs(x="Day of year", 
-       y="Cyanobacteria relative biovolume 
-       (as % total phytoplankton biovolume)") +
-  annotate('rect', fill='gray60', alpha=.2, #creates a shadow box 
-           xmin=-Inf, xmax=196, ymin=0, ymax=Inf) +#shadow box highlights CyanoHAB season
-  annotate('rect', fill='gray60', alpha=.2, #creates a shadow box 
-           xmin=258, xmax=Inf, ymin=0, ymax=Inf)  #shadow box highlights CyanoHAB season
-fig2<- a / b #plot a over plot b
-fig2 #print out plot
-ggsave("Products/Figure2_color.png") #saves plot to Products folder
-```
-
-Data plotted.
 
 # Step 4. Bin observations into same daynumber each year:
 
